Fixed navbar on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -199,7 +199,7 @@ nav #menu .icon {
 	nav #dropdown.responsive {
 		display: block;
 		width: 100%;
-		height: 180px;
+		height: 220px;
 	}
 	nav #dropdown.responsive li {
 		width: 100%;
